# replicant

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
examples/: 01_basic_replication.py  02_random_personalities.py  03_skewed_population.py  04_custom_traits.py  05_named_profiles.py  06_hybrid_humans_bots.py  07_validate_personalities.py  README.md
paper/: paper.aux  paper.md  paper.out  paper.tex
papers/TEMPLATE/: README.md  __init__.py  analyze.py  config.py  experiment.py  run.py
papers/ertan2009/: __init__.py  analyze.py  compare.py  config.py  experiment.py  fig_personality.py  figures_v2.py  run.py
papers/ertan2009/replicated/: paper.tex
papers/ertan2009/replicated_v2/: paper.tex  refs.bib
src/framework/: __init__.py  experiment.py  personalities.py
src/framework/templates/: public_goods.py
src/papers/ertan2009/: experiment.py  fig_personality.py  figures.py  run.py
src/replicant/: __init__.py  __main__.py  play.py
src/replicant/analysis/: comparison.py
src/replicant/experiments/: __init__.py
src/replicant/otree/: __init__.py  __main__.py  bot.py  client.py
src/replicant/personalities/: __init__.py  factory.py  validation.py
src/replicant/personalities/legacy/: __init__.py
tests/otree_server/: Dockerfile  settings.py
tests/otree_server/ertan2009_v2/: __init__.py
